// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`変数 式 if 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 7,
                    \\"endOffset\\": 11,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 9,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 9,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 13,
                    \\"endOffset\\": 14,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 39,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 39,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"LogicExpression\\": [
                              {
                                \\"name\\": \\"LogicExpression\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 16,
                                                              \\"endOffset\\": 16,
                                                              \\"startLine\\": 2,
                                                              \\"endLine\\": 2,
                                                              \\"startColumn\\": 16,
                                                              \\"endColumn\\": 16,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 20,
                                                              \\"endOffset\\": 20,
                                                              \\"startLine\\": 2,
                                                              \\"endLine\\": 2,
                                                              \\"startColumn\\": 20,
                                                              \\"endColumn\\": 20,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 18,
                                                  \\"endOffset\\": 18,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 18,
                                                  \\"endColumn\\": 18,
                                                  \\"tokenTypeIdx\\": 19,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 18,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          19,
                                                          20
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"19\\": true,
                                                          \\"20\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 19,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"name\\": \\"PipeTail\\",
                          \\"children\\": {}
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ],
    \\"IfStatement\\": [
      {
        \\"name\\": \\"IfStatement\\",
        \\"children\\": {
          \\"IfToken\\": [
            {
              \\"image\\": \\"if:\\",
              \\"startOffset\\": 28,
              \\"endOffset\\": 30,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 7,
              \\"endColumn\\": 9,
              \\"tokenTypeIdx\\": 33,
              \\"tokenType\\": {
                \\"name\\": \\"IfToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 33,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"conditionalExpression\\": [
            {
              \\"name\\": \\"Pipe\\",
              \\"children\\": {
                \\"from\\": [
                  {
                    \\"name\\": \\"PipeFrom\\",
                    \\"children\\": {
                      \\"LogicExpression\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"Term\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"Identifier\\": [
                                                      {
                                                        \\"image\\": \\"value\\",
                                                        \\"startOffset\\": 32,
                                                        \\"endOffset\\": 36,
                                                        \\"startLine\\": 3,
                                                        \\"endLine\\": 3,
                                                        \\"startColumn\\": 11,
                                                        \\"endColumn\\": 15,
                                                        \\"tokenTypeIdx\\": 9,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Identifier\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 9,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"tail\\": [
                  {
                    \\"name\\": \\"PipeTail\\",
                    \\"children\\": {}
                  }
                ]
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 38,
              \\"endOffset\\": 38,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 17,
              \\"endColumn\\": 17,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            },
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 53,
              \\"endOffset\\": 53,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 14,
              \\"endColumn\\": 14,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"BlockStatement\\": [
            {
              \\"name\\": \\"BlockStatement\\",
              \\"children\\": {}
            },
            {
              \\"name\\": \\"BlockStatement\\",
              \\"children\\": {}
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 46,
              \\"endOffset\\": 46,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 7,
              \\"endColumn\\": 7,
              \\"tokenTypeIdx\\": 13,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 13,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            },
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 61,
              \\"endOffset\\": 61,
              \\"startLine\\": 5,
              \\"endLine\\": 5,
              \\"startColumn\\": 7,
              \\"endColumn\\": 7,
              \\"tokenTypeIdx\\": 13,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 13,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ],
          \\"ElseToken\\": [
            {
              \\"image\\": \\"else\\",
              \\"startOffset\\": 48,
              \\"endOffset\\": 51,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 9,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 34,
              \\"tokenType\\": {
                \\"name\\": \\"ElseToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 34,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`変数 演算 数値 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 7,
                    \\"endOffset\\": 11,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 9,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 9,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 13,
                    \\"endOffset\\": 14,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 39,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 39,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"LogicExpression\\": [
                              {
                                \\"name\\": \\"LogicExpression\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 16,
                                                              \\"endOffset\\": 16,
                                                              \\"startLine\\": 2,
                                                              \\"endLine\\": 2,
                                                              \\"startColumn\\": 16,
                                                              \\"endColumn\\": 16,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 20,
                                                              \\"endOffset\\": 20,
                                                              \\"startLine\\": 2,
                                                              \\"endLine\\": 2,
                                                              \\"startColumn\\": 20,
                                                              \\"endColumn\\": 20,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 18,
                                                  \\"endOffset\\": 18,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 18,
                                                  \\"endColumn\\": 18,
                                                  \\"tokenTypeIdx\\": 19,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 18,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          19,
                                                          20
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"19\\": true,
                                                          \\"20\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 19,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"name\\": \\"PipeTail\\",
                          \\"children\\": {}
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 28,
                    \\"endOffset\\": 32,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 9,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 9,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 34,
                    \\"endOffset\\": 35,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 39,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 39,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"LogicExpression\\": [
                              {
                                \\"name\\": \\"LogicExpression\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"value\\",
                                                              \\"startOffset\\": 37,
                                                              \\"endOffset\\": 41,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 16,
                                                              \\"endColumn\\": 20,
                                                              \\"tokenTypeIdx\\": 9,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 9,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 45,
                                                              \\"endOffset\\": 45,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 24,
                                                              \\"endColumn\\": 24,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 43,
                                                  \\"endOffset\\": 43,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 22,
                                                  \\"endColumn\\": 22,
                                                  \\"tokenTypeIdx\\": 19,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 18,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          19,
                                                          20
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"19\\": true,
                                                          \\"20\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 19,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"name\\": \\"PipeTail\\",
                          \\"children\\": {}
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`変数 演算 文字列 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 7,
                    \\"endOffset\\": 11,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 9,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 9,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 13,
                    \\"endOffset\\": 14,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 39,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 39,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"LogicExpression\\": [
                              {
                                \\"name\\": \\"LogicExpression\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"StringLiteral\\": [
                                                            {
                                                              \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                              \\"startOffset\\": 16,
                                                              \\"endOffset\\": 21,
                                                              \\"startLine\\": 2,
                                                              \\"endLine\\": 2,
                                                              \\"startColumn\\": 16,
                                                              \\"endColumn\\": 21,
                                                              \\"tokenTypeIdx\\": 3,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"StringLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 3,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"name\\": \\"PipeTail\\",
                          \\"children\\": {}
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 29,
                    \\"endOffset\\": 33,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 9,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 9,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 35,
                    \\"endOffset\\": 36,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 39,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 39,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"LogicExpression\\": [
                              {
                                \\"name\\": \\"LogicExpression\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"value\\",
                                                              \\"startOffset\\": 38,
                                                              \\"endOffset\\": 42,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 16,
                                                              \\"endColumn\\": 20,
                                                              \\"tokenTypeIdx\\": 9,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 9,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"StringLiteral\\": [
                                                            {
                                                              \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                              \\"startOffset\\": 46,
                                                              \\"endOffset\\": 51,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 24,
                                                              \\"endColumn\\": 29,
                                                              \\"tokenTypeIdx\\": 3,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"StringLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 3,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 44,
                                                  \\"endOffset\\": 44,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 22,
                                                  \\"endColumn\\": 22,
                                                  \\"tokenTypeIdx\\": 19,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 18,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          19,
                                                          20
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"19\\": true,
                                                          \\"20\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 19,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"name\\": \\"PipeTail\\",
                          \\"children\\": {}
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
